# dimrgame

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: crossprod.r  dimrgame-package.r  svd.r  zzz.r
man/: crossprod_game.Rd  dimrgame-package.Rd  svd_game.Rd
scripts/: cp_bench.r  cp_test.r  svd_bench.r  svd_test.r
src/: Makevars.in  Rmpi.h  blas.hh  common.h  crossprod.cu  crossprod.hh  cu_utils.hh  dimrgame_native.c  eigen.hh  init.cu  mpi_utils.hpp  restrict.h  svd.cu  svd.hh  types.hpp
